# pecert

./: .gitignore  README.md  example.py  extract-cert.py  pyproject.toml  requirements.txt
src/pecert/: __init__.py  cli.py
