[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pecert"
version = "0.1.0"
authors = [
  { name="User", email="user@example.com" },
]
description = "A tool to extract digital certificates from PE files."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pefile",
    "cryptography",
]

[project.scripts]
pecert = "pecert.cli:main"
